NIFI-10067: enable use of script when updating documents in Elasticsearch via PutElasticsearchJson or PutElasticsearchRecord NIFI-3262: enable use of dynamic_templates in Elasticsearch _bulk operations
Signed-off-by: Joe Gresock <jgresock@gmail.com>

This closes #6628.